standardize routes api and add handler for /results/last/{quantity}
